# smart-detector

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pom.xml  pyproject.toml
.github/workflows/: compose.yaml
decompose-server/: Dockerfile
decompose-server/src/: controller.R
noise-reduction-server/src/: controller.R
src/main/java/com/example/detection/: DetectionApplication.java
src/main/java/com/example/detection/controller/: MainController.java
src/main/java/com/example/detection/exception/: ExceptionsHandler.java
src/main/java/com/example/detection/service/: DetectionService.java  DetectionServiceImpl.java
src/main/resources/: application.yml
src/main/resources/templates/: index.html
src/test/java/com/example/detection/: DetectionApplicationTests.java
src/test/java/com/example/detection/controller/: DetectionApplicationControllerTest.java
